--- a/Northwood.UI/ProjectExplorer.xaml
+++ b/Northwood.UI/ProjectExplorer.xaml
@@ -1,9 +1,11 @@
 ﻿<UserControl x:Class="Northwood.UI.ProjectExplorer"
+			 xmlns:UI="clr-namespace:Northwood.UI"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
+			 UI:ViewModelResolver.Autowire="True"
              d:DesignHeight="300" d:DesignWidth="300">
 	<DockPanel>
 		<ListBox ItemsSource="{Binding Documents}" SelectedItem="{Binding SelectedDocument}" />
