--- a/Northwood.UI/MainWindow.xaml
+++ b/Northwood.UI/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window xmlns:UI="clr-namespace:Northwood.UI"  x:Class="Northwood.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		UseLayoutRounding="True"
         Title="Northwood Design Suite" Height="500" Width="900" FontSize="24" FontFamily="Segoe UI Light" Background="#ccc">
 	<UI:ProjectShell x:Name="shell" />
 </Window>
