--- a/Northwood.UI/ProjectExplorerView.xaml
+++ b/Northwood.UI/ProjectExplorerView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Northwood.UI.ProjectExplorer"
+﻿<UserControl x:Class="Northwood.UI.ProjectExplorerView"
 			 xmlns:UI="clr-namespace:Northwood.UI"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" UI:ViewModelResolver.Autowire="True"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 	<DockPanel>
 		<ListBox ItemsSource="{Binding Documents}" SelectedItem="{Binding SelectedDocument}" 
@@ -19,7 +19,7 @@
 			</ListBox.ItemTemplate>
 			<ListBox.ContextMenu>
 				<ContextMenu>
-					<MenuItem Header="Open" />
+					<MenuItem Header="Open" Command="Open" CommandParameter="{Binding SelectedDocument}" />
 					<Separator />
 					<MenuItem Header="Rename" />
 					<MenuItem Header="Set as Top Level" />
