--- a/Northwood.UI/BackstageView.xaml
+++ b/Northwood.UI/BackstageView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Northwood.UI.Backstage"
+﻿<UserControl x:Class="Northwood.UI.BackstageView"
 			 xmlns:UI="clr-namespace:Northwood.UI"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
