--- a/Northwood.UI/BlockDiagramView.xaml
+++ b/Northwood.UI/BlockDiagramView.xaml
@@ -3,9 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:UI="clr-namespace:Northwood.UI"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="900">
-	<Canvas Background="White">
-		
-	</Canvas>
+	<UI:Diagram Background="White">
+		<UI:DiagramItem Y="230" X="23" Background="Aqua" Padding="10">
+			<UI:DiagramItem.Header>
+				sdf
+			</UI:DiagramItem.Header>
+			<UI:DiagramItemPort Header="PortType" Content="A" />
+			<UI:DiagramItemPort Header="PortType" Content="B" />
+			<UI:DiagramItemPort Header="PortType" Content="C" />
+		</UI:DiagramItem>
+	</UI:Diagram>
 </UserControl>
