--- a/Northwood.UI/Themes/Generic.xaml
+++ b/Northwood.UI/Themes/Generic.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:UI="clr-namespace:Northwood.UI"
 					xmlns:local="clr-namespace:Northwood.UI">
+	
 	<Style TargetType="{x:Type local:Diagram}">
 		<Setter Property="Template">
 			<Setter.Value>
@@ -39,26 +41,21 @@
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type local:DiagramItem}">
-					<Border Name="Bd"
+					<Border Name="Bd" Focusable="True"
                     Background="{TemplateBinding Background}"
                     BorderBrush="{TemplateBinding BorderBrush}"
                     BorderThickness="{TemplateBinding BorderThickness}"
 					Padding="{TemplateBinding Padding}"
                     SnapsToDevicePixels="true">
-						<Grid>
-							<ContentPresenter Name="cp" Content="{TemplateBinding Header}" Grid.Column="1" Grid.Row="1" />
-							<Grid IsItemsHost="True">
-								<Grid.RowDefinitions>
-									<RowDefinition />
-									<RowDefinition Height="{Binding Height, ElementName=cp}" />
-									<RowDefinition />
-								</Grid.RowDefinitions>
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition />
-									<ColumnDefinition Width="{Binding Width, ElementName=cp}" />
-									<ColumnDefinition />
-								</Grid.ColumnDefinitions>
-							</Grid>							
+						<Grid Name="grd">							
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Name="contentLeft" Width="Auto" />
+								<ColumnDefinition Name="contentHCenter" Width="Auto" />
+								<ColumnDefinition Name="contentRight" Width="Auto" />
+							</Grid.ColumnDefinitions>
+							<ContentControl Name="cp" Grid.Column="1" Margin="{TemplateBinding ContentMargin}" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}" />
+							<StackPanel Name="pnlLeft" />
+							<StackPanel Name="pnlRight"  Grid.Column="2" />
 						</Grid>
 					</Border>
 				</ControlTemplate>
@@ -76,17 +73,14 @@
                     BorderThickness="{TemplateBinding BorderThickness}"
 					Padding="{TemplateBinding Padding}"
                     SnapsToDevicePixels="true">
-						<Grid>
-							<Grid.RowDefinitions>
-								<RowDefinition />
-								<RowDefinition />
-							</Grid.RowDefinitions>
+						<DockPanel>
 							<ContentPresenter Content="{TemplateBinding Header}" />
-							<ContentPresenter Grid.Row="1" />
-						</Grid>
+							<ContentPresenter DockPanel.Dock="Left" />
+						</DockPanel>
 					</Border>
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
 	</Style>
+	
 </ResourceDictionary>
